# BRServer

./: .gitattributes  .gitignore  BRMonitoringWeb.sln  BRTestApp.sln  BrClient.sln  BrExternalBuild.sln  BrServerTest.Linux.sln  BrServerTest.Linux2.sln  BrServerTest.sln  BrServers.sln  BrServersLinux.sln  BrServersSF.sln  BrTools.sln  BuildExternalLibs.cmd  CMakeLinuxGen.sh  CMakeLists.txt  CMakeWinBuild.cmd  CMakeWinGen.cmd  GitPullAll.cmd  LICENSE.rtf  LinuxBuild.sh  LinuxGen.sh  LogAll.reg  LogForDebug.reg  LogNetGuarranted.reg  LogNetTCP.reg  LogWithMessage.reg  MakeJunctionSF.cmd  README.md  Readme.txt  Setup.cmd  SvrBuildData.cmd  SvrBuildData.sh  SvrCleanData.cmd  SvrCleanData.sh  SyncSF3rdParites.cmd  WinBuild.cmd  WinGen.cmd  srcsrv.ini  testapp_devserver.reg  (+5 more)
3rdParties/PlayFabGSDK/: CMakeLists.txt
Server/Lib/DB/: AccountDB.cpp  AccountDB.h  AccountQuery.cpp  AccountQuery.h  CMakeLists.txt  DB.Linux.vcxproj  DB.Linux.vcxproj.filters  DB.Win.vcxproj  DB.vcxitems  DB.vcxitems.filters  DB.vcxproj  DB.vcxproj.filters  DBClusterManager.cpp  DBClusterManager.h  DBConfig.h  DBConst.h  DBMYSQL.h  DBOLEDB.h  DBPch.h  DBToString.cpp  DBToString.h  DBTrace.cpp  DBTrace.h  DataSource.cpp  DataSource.h  DataSourceMYSQL.cpp  DataSourceMYSQL.h  DataSourceOLEDB.cpp  DataSourceOLEDB.h  DatabaseServiceComponent.cpp  DatabaseServiceComponent.h  Factory.cpp  Factory.h  FactoryMYSQL.cpp  FactoryMYSQL.h  FactoryOLEDB.cpp  FactoryOLEDB.h  GameConspiracyDB.cpp  GameConspiracyDB.h  GameConspiracyQuery.cpp  (+37 more)
Server/Lib/DB/Game/: GameDB.cpp  GameDB.h  GameQuery.cpp  GameQuery.h
Server/Lib/DB/MySQL/: DBMYSQL.h  DataSourceMYSQL.cpp  QueryMYSQL.h  (+6 more)
Server/Lib/ServerProtocol/: CMakeLists.txt  GenericMsgClass.cpp  GenericMsgClass.h  ProtocolHelper.inl  ProtocolMessageCPPInc.h  ProtocolTrace.h  ProtocolVer.h  ServerProtocol.Linux.vcxproj  ServerProtocol.Win.vcxproj  ServerProtocol.Win.vcxproj.filters  ServerProtocol.vcxitems  ServerProtocol.vcxitems.filters  ServerProtocolPCH.h  makefile.mak  stdafx.cpp  stdafx.h
Server/Lib/ServerSystem/: BRServer.cpp  BRService.cpp  BRService.win64.cpp  BrServer.h  BrServer.inl  BrServerUtil.cpp  BrServerUtil.h  BrServerUtil.inl  BrService.h  BrSvrTypes.h  BrSvrTypes.inl  CMakeLists.txt  Component.h  Entity.cpp  Entity.h  Entity.inl  EntityManager.cpp  EntityManager.h  EntityTable.cpp  EntityTable.h  EntityTimerActions.cpp  EntityTimerActions.h  EventTask.cpp  EventTask.h  EventTask.inl  ExternalTask.cpp  ExternalTask.h  ExternalTask.inl  ExternalTransaction.cpp  ExternalTransaction.h  ExternalTransactionManager.cpp  ExternalTransactionManager.h  GameConst.h  GameSystem.h  GameSystem.inl  LoopbackConnection.cpp  LoopbackConnection.h  MasterEntity.cpp  MasterEntity.h  MessageHandlerTable.h  (+70 more)
Server/Lib/Table/: CMakeLists.txt  Table.Linux.vcxproj  Table.Win.vcxproj  Table.vcxitems  Table.vcxitems.filters  Table.vcxproj  Table.vcxproj.filters  TablePCH.h  TableQueries.cpp  TableQueries.h  TableSystem.cpp  TableSystem.h  makefile.mak  stdafx.cpp  stdafx.h
Server/Service/GameInstanceServer/: CMakeLists.txt  ConspiracyGameInstanceServer.Linux.vcxproj  ConspiracyGameInstanceServer.Win.vcxproj  ConspiracyGameInstanceServer.Win.vcxproj.filters  ConspiracyGameInstanceServer.cpp  ConspiracyGameInstanceServer.vcxitems  ConspiracyGameInstanceServer.vcxitems.filters  ConspiracyGameInstanceServerClass.cpp  ConspiracyGameInstanceServerClass.h  ConspiracyGameInstanceServerClass.inl  ConspiracyGameInstanceServer_NetProc.cpp  ConspiracyGameInstanceSvrConst.h  GameInstanceServer.Linux.vcxproj  GameInstanceServer.Linux.vcxproj.filters  GameInstanceServer.vcxproj  GameInstanceServer.vcxproj.filters  GameServer.h  GameServer.rc  makefile.mak  stdafx.h
Server/Service/ModuleServer/: CMakeLists.txt  GameServer.h  ModuleServer.Linux.vcxproj  ModuleServer.Win.vcxproj  ModuleServer.Win.vcxproj.filters  ModuleServer.vcxitems  ModuleServer.vcxitems.filters  ModuleServer.vcxproj  ModuleServer.vcxproj.filters  ModuleServerPCH.h  SharedModuleServer.Linux.vcxproj.filters  SharedModuleServer.cpp  SharedModuleServerClass.cpp  SharedModuleServerClass.h  SharedModuleServerClass.inl  SharedModuleServer_ModuleMapping.cpp  SharedModuleServer_NetProc.cpp  SharedModuleSvrConst.h  makefile.mak  stdafx.cpp  stdafx.h
Server/Service/PlayFabRelay/: CMakeLists.txt  NetRelayServer.cpp  NetRelayServer.h  RelayServer.cpp  RelayServer.h  RelayServer.rc  RelayServerClass.cpp  RelayServerClass.h  RelayServerPCH.cpp  Resource.h
Server/Service/ServerInstanceLauncher/: CMakeLists.txt  SFProcessManager.cpp  SFProcessManager.h  SFProcessManagerLinux.cpp  SFProcessManagerWin.cpp  ServerInstanceLanucherPCH.h  ServerInstanceLauncher.Linux.vcxproj  ServerInstanceLauncher.Win.vcxproj  ServerInstanceLauncher.Win.vcxproj.filters  ServerInstanceLauncher.cpp  ServerInstanceLauncher.h  ServerInstanceLauncher.rc  ServerInstanceLauncher.vcxitems  ServerInstanceLauncherClass.cpp  ServerInstanceLauncherClass.h  ZooKeeperCommand.cpp  ZooKeeperCommand.h  ZookeeperCommand.cpp  ZookeeperCommand.h  stdafx.cpp  stdafx.h
TestApp/UnitTest/: AVLTreeTest.h  AVLTreeTest_DualMap.cpp  AVLTreeTest_DualMapPerformance.cpp  AVLTreeTest_Performance.cpp  AVLTreeTest_SortedMap.cpp  CMakeLists.txt  ConcurrentContainerTest.cpp  ConcurrentContainerTest.h  DBTest.cpp  DBTest.h  HTTPTest.cpp  HTTPTest.h  HashTable2Test.cpp  HashTable2_Performance.cpp  HashTableTest.cpp  HashTableTest.h  MemoryTest.cpp  MemoryTest.h  NetTest.cpp  NetTest.h  ServerSystemTest.cpp  ServerSystemTest.h  StaticHashTableTest.cpp  SystemSynchronizeTest.cpp  SystemSynchronizeTest.h  TestApp.cpp  TestBase.cpp  TestBase.h  ThreadTest.cpp  ThreadTest.h  UnitTest.Linux.vcxproj  UnitTest.Linux.vcxproj.filters  UnitTest.vcxproj  UnitTest.vcxproj.filters  UnitTestPch.h  UnitTest_Avro.cpp  UnitTest_Avro.h  makefile.mak  stdafx.cpp  stdafx.h  (+2 more)
example/Conspiracy/GameDB/: CMakeLists.txt  GameConspiracyDB.h  GameConspiracyDBPch.h  GameConspiracyQuery.cpp  GameConspiracyQuery.h
example/Conspiracy/GameServer/: CMakeLists.txt  GameServerClass.cpp  GameServerClass.h  GameServerPCH.h  Resource.h
(+6583 files in other folders)
